src/test/deca/context/valid/oracle/use_defined_variable_in_elseif.deca
{
    int i = 1;
    if(false){
    } else if(true){
        println(i+1);
    }
}