src/test/deca/context/invalid/oracle/elseif.deca
{
    if(false){
        print();
    }elseif(true){
        print();
    }
}